log
Thu 28 Mar 2024 08:46:17 PM UTC: 
 tests:  0|6
total_score: 0/70
e61aa01
Thu 28 Mar 2024 08:57:57 PM UTC: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  1|5
total_score: 10/70
03373f1
Thu 28 Mar 2024 09:07:12 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
e7bc02f
Thu 28 Mar 2024 09:09:43 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|5
total_score: 15/70
0d84c5f
Thu 28 Mar 2024 09:11:44 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:60:1: error: control reaches end of non-void function [-Werror=return-type]
   60 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
58d77e0
Thu 28 Mar 2024 09:13:16 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
59fe68f
Thu 28 Mar 2024 09:14:19 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
657300f
Thu 28 Mar 2024 09:30:48 PM UTC: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  5|4
total_score: 25/70
14ffaf6
Thu 28 Mar 2024 09:32:00 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
cf5a288
Thu 28 Mar 2024 09:42:16 PM UTC: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:76:68: error: lvalue required as left operand of assignment
   76 |   if (list == NULL || list->current == NULL || list->current->prev = NULL)
      |                                                                    ^
Compilation failed
555391a
Thu 28 Mar 2024 09:42:29 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
7e8b4b1
Fri 29 Mar 2024 01:29:48 AM UTC: 
 list.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:98:36: error: implicit declaration of function ‘size_of’ [-Werror=implicit-function-declaration]
   98 |   Node* nuevoNodo = (Node *)malloc(size_of(Node));
      |                                    ^~~~~~~
list.c:98:44: error: expected expression before ‘Node’
   98 |   Node* nuevoNodo = (Node *)malloc(size_of(Node));
      |                                            ^~~~
cc1: all warnings being treated as errors
Compilation failed
bf0f510
Fri 29 Mar 2024 01:30:25 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
3b5d20e
Fri 29 Mar 2024 01:45:28 AM UTC: 
 list.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  10|2
total_score: 45/70
8f3ea33
Fri 29 Mar 2024 01:49:43 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
75bcefe
Fri 29 Mar 2024 01:57:31 AM UTC: 
 list.c | 13 ++++++++-----
 1 file changed, 8 insertions(+), 5 deletions(-)
 tests:  11|1
total_score: 55/70
bf2c783
Fri 29 Mar 2024 01:57:50 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
fb97a59
Fri 29 Mar 2024 01:58:14 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
b780ae1
Fri 29 Mar 2024 03:51:44 AM UTC: 
 list.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:166:1: error: control reaches end of non-void function [-Werror=return-type]
  166 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
dfe06f9
Fri 29 Mar 2024 03:52:04 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:146:5: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
  146 |     return;
      |     ^~~~~~
list.c:142:8: note: declared here
  142 | void * popCurrent(List * list) {
      |        ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
57c191e
Fri 29 Mar 2024 03:52:58 AM UTC: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:166:1: error: control reaches end of non-void function [-Werror=return-type]
  166 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d62d3ce
Fri 29 Mar 2024 03:57:57 AM UTC: 
 list.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:170:3: error: control reaches end of non-void function [-Werror=return-type]
  170 |   }
      |   ^
cc1: all warnings being treated as errors
Compilation failed
f78abd0
Fri 29 Mar 2024 04:00:05 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:171:1: error: control reaches end of non-void function [-Werror=return-type]
  171 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3bb93a5
Fri 29 Mar 2024 04:00:40 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:147:5: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
  147 |     return;
      |     ^~~~~~
list.c:142:8: note: declared here
  142 | void * popCurrent(List * list)
      |        ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
776ecb6
Fri 29 Mar 2024 04:01:01 AM UTC: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:171:1: error: control reaches end of non-void function [-Werror=return-type]
  171 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
474064c
Fri 29 Mar 2024 04:01:27 AM UTC: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:147:5: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
  147 |     return;
      |     ^~~~~~
list.c:142:8: note: declared here
  142 | void * popCurrent(List * list)
      |        ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3916e08
Fri 29 Mar 2024 04:02:13 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:171:1: error: control reaches end of non-void function [-Werror=return-type]
  171 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0c562b9
Fri 29 Mar 2024 04:20:02 AM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
dabe9a3
Fri 29 Mar 2024 04:25:50 AM UTC: 
 list.c | 19 ++++++++-----------
 1 file changed, 8 insertions(+), 11 deletions(-)
 tests:  12|0
total_score: 70/70
93aadcb
Sat 30 Mar 2024 03:32:06 PM UTC: 
 list.c | 19 +++++++++++--------
 1 file changed, 11 insertions(+), 8 deletions(-)
 tests:  12|0
total_score: 70/70
da9a82a
Sat 30 Mar 2024 04:00:34 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
d0f845a
Sat 30 Mar 2024 04:01:02 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  12|0
total_score: 70/70
8419a5a
